      provisions are made for paravirtualization.  The dom0 flag
      should be used to build binaries specific to Xen dom0
      environments where special provisions are made for the
      hypervisor.  The existing "xen" flag should be used to build
      binaries specific to Xen which apply equally to Xen dom0 and
      domU environments.

  o Server Changes:
    * Use the term Entitlement Class in all conary repository web interfaces
      replacing Entitlement Group.

  o Bugs Fixed:
    * The Conary Repository now returns an error to a client when
      committing duplicate troves that have no an empty
      flavor. (CNY-476)
    * When checking out a source trove from a repository using
      "cvc checkout", the user is no longer warned about not being able
      to change the ownership of the files checked out.
    * A bug has been fixed in conary's determination of what troves
      had been updated locally.  This bug caused "conary updateall" to
      consider many x86 troves as needing to be updated separately
      instead of as a part of group-dist.  This could cause updateall
      failures. (CNY-497)
    * A bug that caused 'conary q tmpwatch:runtime --recurse' to traceback
      has been fixed (CNY-460)
    * interactive mode now handles EOF by assuming it means 'no'.  (CNY-391,
      thanks go to David Coulthart for the patch).
    * config settings in contexts can now be overridden from the command 
      line. (CNY-22)

Changes in 1.0.18:
  o Client Changes:
    * Trying to shadow a cooked redirect now results in an error. (CNY-447)
    * A --keep-required option has been added to tell Conary to leave
      troves installed when removing them would break
      dependencies. This used to be the default behavior; Conary now
      issues a dependency error instead. (CNY-6)
    * "delete-entitlement" and "list-entitlements" options have been
      added to the "manageents" script.

  o Build Changes: